--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
   </script>
 </head>
 <body>
-<p>Si vous n'êtes pas redirigé, <a href="/abdoulaye-portfolio/">cliquez ici</a>.</p>
+<p>Si vous n'êtes pas redirigé, <a href="/abdoulaye-portfolio/">cliquez ici merci </a>.</p>
 </body>
 </html>
 
